--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngrx/store-devtools": "^7.3.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.4.0",
+    "serialize-error": "^3.0.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
