--- a/angular.json
+++ b/angular.json
@@ -212,6 +212,33 @@
           }
         }
       }
+    },
+    "file-upload": {
+      "projectType": "library",
+      "root": "libs/file-upload",
+      "sourceRoot": "libs/file-upload/src",
+      "prefix": "real-world-app",
+      "architect": {
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "libs/file-upload/tsconfig.lib.json",
+              "libs/file-upload/tsconfig.spec.json"
+            ],
+            "exclude": ["**/node_modules/**", "!libs/file-upload/**"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "libs/file-upload/jest.config.js",
+            "tsConfig": "libs/file-upload/tsconfig.spec.json",
+            "setupFile": "libs/file-upload/src/test-setup.ts"
+          }
+        }
+      },
+      "schematics": {}
     }
   },
   "cli": {
