--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@real-world-app/api-interfaces": ["libs/api-interfaces/src/index.ts"]
+      "@real-world-app/api-interfaces": ["libs/api-interfaces/src/index.ts"],
+      "@real-world-app/file-upload": ["libs/file-upload/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
