--- a/package.json
+++ b/package.json
@@ -38,14 +38,20 @@
     "@angular/platform-browser": "^8.2.0",
     "@angular/platform-browser-dynamic": "^8.2.0",
     "@angular/router": "^8.2.0",
+    "@fortawesome/angular-fontawesome": "^0.5.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.22",
+    "@fortawesome/free-solid-svg-icons": "^5.10.2",
     "@nestjs-addons/in-memory-db": "^1.6.1",
     "@nestjs/common": "^6.2.4",
     "@nestjs/core": "^6.2.4",
     "@nestjs/platform-express": "^6.2.4",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.1",
     "@ngrx/effects": "^8.3.0",
+    "@ngrx/entity": "^8.3.0",
     "@ngrx/store": "^8.3.0",
     "@ngrx/store-devtools": "^8.3.0",
     "@nrwl/angular": "8.5.0",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "reflect-metadata": "^0.1.12",
     "rxjs": "~6.4.0",
