--- a/package.json
+++ b/package.json
@@ -53,34 +53,36 @@
     "@nrwl/angular": "8.5.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "file-saver": "^2.0.2",
     "reflect-metadata": "^0.1.12",
     "rxjs": "~6.4.0",
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^0.803.3",
     "@angular/cli": "8.3.3",
-    "@nrwl/workspace": "8.5.0",
-    "@types/node": "~8.9.4",
-    "dotenv": "6.2.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "eslint": "6.1.0",
-    "typescript": "~3.4.5",
-    "prettier": "1.16.4",
-    "@nrwl/nest": "8.5.0",
     "@angular/compiler-cli": "^8.2.0",
     "@angular/language-service": "^8.2.0",
-    "@angular-devkit/build-angular": "^0.803.3",
-    "codelyzer": "~5.0.1",
-    "jest-preset-angular": "7.0.0",
-    "@nrwl/jest": "8.5.0",
-    "jest": "24.1.0",
-    "@types/jest": "24.0.9",
-    "ts-jest": "24.0.0",
-    "cypress": "3.4.1",
-    "@nrwl/cypress": "8.5.0",
-    "@nrwl/node": "8.5.0",
     "@nestjs/schematics": "^6.3.0",
-    "@nestjs/testing": "^6.2.4"
+    "@nestjs/testing": "^6.2.4",
+    "@nrwl/cypress": "8.5.0",
+    "@nrwl/jest": "8.5.0",
+    "@nrwl/nest": "8.5.0",
+    "@nrwl/node": "8.5.0",
+    "@nrwl/workspace": "8.5.0",
+    "@types/file-saver": "^2.0.1",
+    "@types/jest": "24.0.9",
+    "@types/node": "~8.9.4",
+    "codelyzer": "~5.0.1",
+    "cypress": "3.4.1",
+    "dotenv": "6.2.0",
+    "eslint": "6.1.0",
+    "jest": "24.1.0",
+    "jest-preset-angular": "7.0.0",
+    "prettier": "1.16.4",
+    "ts-jest": "24.0.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.11.0",
+    "typescript": "~3.4.5"
   }
 }
