--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "file-saver": "^2.0.2",
     "reflect-metadata": "^0.1.12",
     "rxjs": "~6.4.0",
+    "serialize-error": "^5.0.0",
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
